# forwardplusrendering

./: .gitignore  CMakeLists.txt  README.md  build-cmake.bat  build-sln-open.bat  build-sln.bat  launch.bat
assets/models/: axis_of_evil.nff
assets/models/crytek-sponza/: sponza_nobanner.obj.dep
assets/models/crytek-sponza/textures/: background.tga.dep  background_ddn.tga.dep  chain_texture.tga.dep  chain_texture_ddn.tga.dep  chain_texture_mask.tga.dep  lion.tga.dep  lion_ddn.tga.dep  spnza_bricks_a_ddn.tga.dep  spnza_bricks_a_diff.tga.dep  spnza_bricks_a_spec.tga.dep  sponza_arch_diff.tga.dep  sponza_ceiling_a_diff.tga.dep  sponza_ceiling_a_spec.tga.dep  sponza_column_a_ddn.tga.dep  sponza_column_a_diff.tga.dep  sponza_column_a_spec.tga.dep  sponza_column_b_ddn.tga.dep  sponza_column_b_diff.tga.dep  sponza_column_b_spec.tga.dep  sponza_column_c_ddn.tga.dep  sponza_column_c_diff.tga.dep  sponza_column_c_spec.tga.dep  sponza_curtain_blue_diff.tga.dep  sponza_curtain_diff.tga.dep  sponza_curtain_green_diff.tga.dep  (+24 more)
assets/models/cube/: cube.obj.dep  default.psd  default.psd.dep
assets/models/test/: cube.obj.dep  default.png.dep  default.psd  default.psd.dep  earth_normals.psd  earth_normals.psd.dep  normals2.psd  relief_map.psd  relief_map.psd.dep  test_scene.nff  test_scene.nff.dep  testsphere.obj.dep  uv_checker.png.dep
assets/shaders/: CommonInclude.hlsl  DefaultShader.hlsl  DeferredRendering.hlsl  DeferredRendering.hlsl.dep  ForwardPlusRendering.hlsl  ForwardPlusRendering.hlsl.dep  ForwardRendering.hlsl  ForwardRendering.hlsl.dep
conf/: DefaultConfiguration.3dgep  RegisterFileType.bat  RegisterFileType_Win8_Rel_x64.bat  UnregisterFileType_Win10_Rel_x64.bat  UnregisterFileType_Win8_Rel_x64.bat  crytek-sponza.3dgep  testcube.3dgep  testscene.3dgep  testsphere.3dgep
engine/inc/: Application.h  BlendState.h  BoundingSphere.h  Buffer.h  BufferBinding.h  CPUAccess.h  Camera.h  ClearFlags.h  ConstantBuffer.h  ConstantBuffer.inl  DependencyTracker.h  DepthStencilState.h  EnginePCH.h  EngineTime.h  Events.h  Graphics.h  KeyCodes.h  Light.h  Material.h  Mesh.h  Object.h  PipelineState.h  Pixel.h  ProgressWindow.h  Query.h  Random.h  RasterizerState.h  Ray.h  RaycastHit.h  ReadDirectoryChanges.h  Rect.h  RenderDevice.h  RenderDevice.inl  RenderTarget.h  RenderWindow.h  SamplerState.h  Scene.h  SceneNode.h  Serialization.h  Shader.h  (+9 more)
engine/src/: Application.cpp  BoundingSphere.cpp  Camera.cpp  ConstantBuffer.cpp  DependencyTracker.cpp  EnginePCH.cpp  EngineTime.cpp  Graphics.cpp  HighResolutionTimer.cpp  Material.cpp  Object.cpp  ProgressWindow.cpp  Random.cpp  Ray.cpp  RenderDevice.cpp  RenderWindow.cpp  Scene.cpp  SceneBase.cpp  SceneBase.h  SceneNode.cpp  ShaderParameter.cpp  Timer.cpp
engine/src/DX11/: BlendStateDX11.cpp  BlendStateDX11.h  BufferDX11.cpp  BufferDX11.h  ConstantBufferDX11.cpp  ConstantBufferDX11.h  DepthStencilStateDX11.cpp  DepthStencilStateDX11.h  MeshDX11.cpp  MeshDX11.h  PipelineStateDX11.cpp  PipelineStateDX11.h  QueryDX11.cpp  QueryDX11.h  RasterizerStateDX11.cpp  RasterizerStateDX11.h  RenderDeviceDX11.cpp  RenderDeviceDX11.h  RenderTargetDX11.cpp  RenderTargetDX11.h  RenderWindowDX11.cpp  RenderWindowDX11.h  SamplerStateDX11.cpp  SamplerStateDX11.h  SceneDX11.cpp  SceneDX11.h  ShaderDX11.cpp  ShaderDX11.h  ShaderParameterDX11.cpp  ShaderParameterDX11.h  StructuredBufferDX11.cpp  StructuredBufferDX11.h  TextureDX11.cpp  TextureDX11.h
engine/src/DX12/: BufferDX12.cpp  BufferDX12.h  DescriptorHeapDX12.cpp  DescriptorHeapDX12.h  DescriptorHeapDX12.inl  MeshDX12.cpp  MeshDX12.h  RenderDeviceDX12.cpp  RenderDeviceDX12.h  RenderWindowDX12.cpp  RenderWindowDX12.h  d3dx12.h
test/inc/: AbstractPass.h  BasePass.h  BeginQueryPass.h  ClearRenderTargetPass.h  ConfigurationSettings.h  ConfigurationSettings.inl  CopyBufferPass.h  CopyTexturePass.h  DeferredLightingPass.h  DispatchPass.h  EndQueryPass.h  GenerateMipMapsPass.h  GraphicsTestPCH.h  InvokeFunctionPass.h  LightPickingPass.h  LightsPass.h  OpaquePass.h  PostprocessPass.h  RenderPass.h  RenderTechnique.h  Statistic.h  TransparentPass.h
test/src/: AbstractPass.cpp  BasePass.cpp  BeginQueryPass.cpp  ClearRenderTargetPass.cpp  ConfigurationSettings.cpp  CopyBufferPass.cpp  CopyTexturePass.cpp  DeferredLightingPass.cpp  DispatchPass.cpp  EndQueryPass.cpp  GenerateMipMapsPass.cpp  InvokeFunctionPass.cpp  LightPickingPass.cpp  LightsPass.cpp  OpaquePass.cpp  PostprocessPass.cpp  RenderTechnique.cpp  Statistic.cpp  TransparentPass.cpp  main.cpp
